// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseFlex /> should have margin-bottom and margin-top not equal 0px 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  margin-bottom: 12px;
  margin-top: 12px;
}

<body>
  <div>
    <div
      class="c0"
      data-margin-bottom="12px"
      data-margin-top="12px"
    />
  </div>
</body>
`;

exports[`<BaseFlex /> should have the basic css settings 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
}

<body>
  <div>
    <div
      class="c0"
    />
  </div>
</body>
`;
